--- a/css/nosostros.css
+++ b/css/nosostros.css
@@ -6,7 +6,7 @@ body{
 .section1{
     
     
-    background: url(/imagenes/fondo\ music2.jpg) no-repeat;
+    background: url(/imagenes/fondo_music2.jpg) no-repeat;
     background-size: cover;
     background-position: center;
     box-sizing: border-box;
