--- a/css/nosostros.css
+++ b/css/nosostros.css
@@ -94,7 +94,7 @@ div[class="contenido"]{
     text-shadow: 2rem black;
 }
 .Detalles{
-    background: url(/imagenes/pepsi3.jpg) no-repeat;
+    background: url('https://github.com/franshes2025/pepsi/raw/main/imagenes/pepsi3.jpg') no-repeat;
     background-size: cover;
     background-attachment: fixed;
     
