--- a/css/nosostros.css
+++ b/css/nosostros.css
@@ -6,7 +6,7 @@ body{
 .section1{
     
     
-    background: url('httpss://github.com/franshes2025/pepsi/raw/main/imagenes/fondomusic2.jpg') no-repeat;
+    background: url('https://github.com/franshes2025/pepsi/raw/main/imagenes/fondomusic2.jpg') no-repeat;
     background-size: cover;
     background-position: center;
     box-sizing: border-box;
